--- a/src/agraciamain_assets/assets/main.css
+++ b/src/agraciamain_assets/assets/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    font-size: 1.5rem;
+    font-size: 3.5rem;
 }
 
 img {
@@ -33,5 +33,5 @@ button[type="submit"] {
 }
 
 #greeting:empty {
-    display: none;
+    display: flex;
 }
